--- a/scss/section/comments.scss
+++ b/scss/section/comments.scss
@@ -17,35 +17,35 @@
 }
 
 .comments__item:nth-child(1) {
-  background: url("../../image/photo-1.jpg") center center / cover no-repeat;
+  background: url("../image/photo-1.jpg") center center / cover no-repeat;
 }
 
 .comments__item:nth-child(2) {
-  background: url("../../image/photo-2.jpg") center center / cover no-repeat;
+  background: url("../image/photo-2.jpg") center center / cover no-repeat;
 }
 
 .comments__item:nth-child(3) {
-  background: url("../../image/photo-3.jpg") center center / cover no-repeat;
+  background: url("../image/photo-3.jpg") center center / cover no-repeat;
 }
 
 .comments__item:nth-child(4) {
-  background: url("../../image/photo-4.jpg") center center / cover no-repeat;
+  background: url("../image/photo-4.jpg") center center / cover no-repeat;
 }
 
 .comments__item:nth-child(5) {
-  background: url("../../image/photo-5.jpg") center center / cover no-repeat;
+  background: url("../image/photo-5.jpg") center center / cover no-repeat;
 }
 
 .comments__item:nth-child(6) {
-  background: url("../../image/photo-6.jpg") center center / cover no-repeat;
+  background: url("../image/photo-6.jpg") center center / cover no-repeat;
 }
 
 .comments__item:nth-child(7) {
-  background: url("../../image/photo-7.jpg") center center / cover no-repeat;
+  background: url("../image/photo-7.jpg") center center / cover no-repeat;
 }
 
 .comments__item:nth-child(8) {
-  background: url("../../image/photo-8.jpg") center center / cover no-repeat;
+  background: url("../image/photo-8.jpg") center center / cover no-repeat;
 }
 
 .comments__content {
