--- a/scss/section/forms.scss
+++ b/scss/section/forms.scss
@@ -134,7 +134,7 @@
 }
 
 .forms__checkbox__click--active {
-  background: url("../../image/checkbox.png") center center no-repeat;
+  background: url("../image/checkbox.png") center center no-repeat;
   width: rem(11px);
   height: rem(9px);
   position: absolute;
