--- a/scss/section/top.scss
+++ b/scss/section/top.scss
@@ -4,9 +4,15 @@
 
 .top__container {
   padding-top: 13px;
+  @include phones {
+    display: flex;
+    align-items: center;
+  }
 }
 
 .header {
+  height: 69px;
+  position: absolute;
   display: flex;
   align-items: center;
   width: 100%;
@@ -77,7 +83,13 @@
   background-color: #e45028;
   border-radius: 5px;
   display: block;
+
   @include tablets {
+    margin-left: auto;
+    margin-right: 30px;
+  }
+
+  @include phones {
     margin-left: auto;
     margin-right: 30px;
   }
@@ -111,8 +123,15 @@
   align-items: center;
   height: 100%;
   width: 100%;
+
   @include tablets {
     flex-direction: column;
+    justify-content: center;
+  }
+
+  @include phones {
+    flex-direction: column;
+    justify-content: center;
   }
 }
 
@@ -120,8 +139,14 @@
   width: 50%;
   display: flex;
   justify-content: flex-end;
+
   @include tablets {
-    width: 100%;
+    width: 56%;
+    justify-content: center;
+  }
+
+  @include phones {
+    width: 80%;
     justify-content: center;
   }
 }
@@ -140,6 +165,14 @@
   font-weight: 400;
   width: 100%;
   white-space: nowrap;
+
+  @include tablets {
+    text-align: center;
+  }
+
+  @include phones {
+    text-align: center;
+  }
 }
 
 .top__text {
@@ -149,6 +182,12 @@
   @include tablets {
     padding-left: 0;
     padding-top: 10px;
+    width: 100%;
+  }
+  @include phones {
+    padding-left: 0;
+    padding-top: 10px;
+    width: 100%;
   }
 }
 
@@ -161,7 +200,14 @@
   letter-spacing: -1.63px;
   line-height: 60px;
   padding-top: 10px;
+
   @include tablets {
+    padding-top: 0;
+    text-align: center;
+  }
+  
+  @include phones {
+    padding-top: 0;
     text-align: center;
   }
 }
