--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+* {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
+
 html {
   font-size: 16px; }
   @media screen and (max-width: 768px) {
@@ -348,15 +352,25 @@ section {
   background: url("../image/best.jpg") center center/cover no-repeat; }
 
 .best__container {
-  padding: 6.875rem 5.6875rem 0 5.6875rem; }
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 95%; }
   @media screen and (max-width: 768px) {
     .best__container {
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center;
       padding: 0;
-      padding-top: 230px;
       width: 95%; } }
   @media screen and (max-width: 480px) {
     .best__container {
-      padding-top: 86px; } }
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center; } }
 
 .best__title {
   color: #2f3234;
@@ -409,8 +423,7 @@ section {
       flex-direction: row;
       -webkit-box-align: start;
       -ms-flex-align: start;
-      align-items: flex-start;
-      margin-bottom: 40px; } }
+      align-items: flex-start; } }
 
 .best__icon {
   display: -webkit-box;
@@ -507,7 +520,17 @@ section {
   background: url("../image/forms.jpg") center center/cover no-repeat; }
 
 .forms__container {
-  padding: 7rem 5.3125rem 0 5.125rem; }
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
+  @media screen and (max-width: 768px) {
+    .forms__container {
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center; } }
 
 .forms__title {
   text-align: center;
@@ -515,23 +538,45 @@ section {
   font-family: "Gagalin", Arial, Helvetica, sans-serif;
   font-size: 4.5rem;
   font-weight: 400;
-  padding-bottom: 1.5625rem; }
+  padding-bottom: 25px; }
 
 .forms__all {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   width: 100%; }
+  @media screen and (max-width: 768px) {
+    .forms__all {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      width: 65%; } }
+  @media screen and (max-width: 480px) {
+    .forms__all {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      width: 100%; } }
 
 .forms__left {
   -ms-flex-preferred-size: 50%;
   flex-basis: 50%;
-  padding-right: 0.625rem; }
+  padding-right: 10px; }
+  @media screen and (max-width: 768px) {
+    .forms__left {
+      padding: 0; } }
 
 .forms__row {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex; }
+  @media screen and (max-width: 480px) {
+    .forms__row {
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center; } }
 
 .forms__left__label {
   width: 100%;
@@ -545,32 +590,40 @@ section {
   font-family: "Ubuntu", Arial, Helvetica, sans-serif;
   font-size: 0.875rem;
   font-weight: 300;
-  padding-bottom: 0.3125rem; }
+  padding-bottom: 5px; }
 
 .forms__left__input {
   width: 100%;
   border: none;
-  border-radius: 0.3125rem;
-  padding: 0.5625rem 0 0.5625rem 1.25rem; }
+  border-radius: 5px;
+  padding: 9px 0 9px 10px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
 
 .forms__right {
   -ms-flex-preferred-size: 50%;
   flex-basis: 50%;
-  padding-left: 0.625rem; }
+  padding-left: 10px; }
+  @media screen and (max-width: 768px) {
+    .forms__right {
+      padding: 0; } }
 
 .forms__right__name {
   color: #ffffff;
   font-family: "Ubuntu", Arial, Helvetica, sans-serif;
   font-size: 0.875rem;
   font-weight: 300;
-  padding-bottom: 0.3125rem; }
+  padding-bottom: 5px; }
 
 .forms__right__textarea {
   width: 100%;
-  border-radius: 0.3125rem;
-  height: 7.0625rem;
+  border-radius: 5px;
+  padding: 9px 0 9px 20px;
+  height: 113px;
   border: none;
-  margin-bottom: 0.5625rem; }
+  margin-bottom: 9px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
 
 .forms__right__label {
   color: #ffffff;
@@ -584,28 +637,33 @@ section {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  margin-right: 1.5625rem;
-  margin-bottom: 1.25rem; }
+  margin-right: 25px;
+  margin-bottom: 20px; }
   .forms__right__label:last-child {
     margin-right: 0; }
+  @media screen and (max-width: 480px) {
+    .forms__right__label {
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center; } }
 
 .forms__radio__click {
-  width: 0.9375rem;
-  height: 0.9375rem;
+  width: 15px;
+  height: 15px;
   background-color: white;
   border: 0;
   border-radius: 50%;
   display: inline-block;
   position: relative;
-  margin-right: 0.625rem; }
+  margin-right: 10px; }
 
 .forms__radio__click--active {
   position: absolute;
   top: 50%;
   left: 50%;
   display: inline-block;
-  width: 0.4375rem;
-  height: 0.4375rem;
+  width: 7px;
+  height: 7px;
   background: #e35028;
   border-radius: 50%;
   -webkit-transform: translate(-50%, -50%);
@@ -622,17 +680,17 @@ section {
     opacity: 1; }
 
 .forms__checkbox__click {
-  width: 0.9375rem;
-  height: 0.9375rem;
+  width: 15px;
+  height: 15px;
   background-color: white;
   border: 0;
   position: relative;
-  margin-right: 0.625rem; }
+  margin-right: 10px; }
 
 .forms__checkbox__click--active {
   background: url("../image/checkbox.png") center center no-repeat;
-  width: 0.6875rem;
-  height: 0.5625rem;
+  width: 11px;
+  height: 9px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -653,18 +711,18 @@ section {
   font-size: 0.8125rem;
   font-weight: 500;
   text-transform: uppercase;
-  padding: 0.4375rem 0.9375rem;
+  padding: 7px 15px;
   background-color: #e45028;
-  border-radius: 0.3125rem;
-  margin-right: 0.3125rem; }
+  border-radius: 5px;
+  margin-right: 5px; }
 
 .forms__clear {
   color: #fff;
   font-family: "Ubuntu", Arial, Helvetica, sans-serif;
   font-size: 0.875rem;
   font-weight: 300;
-  padding: 0.4375rem 0.9375rem;
-  border-radius: 0.3125rem; }
+  padding: 7px 15px;
+  border-radius: 5px; }
 
 .fix {
   position: fixed;
@@ -722,6 +780,14 @@ section {
 .comments__item {
   width: 25%;
   height: 50%; }
+  @media screen and (max-width: 768px) {
+    .comments__item {
+      width: 50%;
+      height: 25%; } }
+  @media screen and (max-width: 480px) {
+    .comments__item {
+      width: 50%;
+      height: 25%; } }
 
 .comments__item:nth-child(1) {
   background: url("../image/photo-1.jpg") center center/cover no-repeat; }
@@ -751,28 +817,60 @@ section {
   width: 100%;
   height: 100%;
   opacity: 0;
-  padding: 2.875rem 2.0625rem 0 1.25rem;
+  padding: 46px 33px 0 20px;
   -webkit-transition: all .5s;
   -o-transition: all .5s;
-  transition: all .5s; }
+  transition: all .5s;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
   .comments__content:hover {
     opacity: 1;
     background: rgba(0, 0, 0, 0.7); }
+    @media screen and (max-width: 768px) {
+      .comments__content:hover {
+        text-align: center;
+        padding: 32px 10% 0 10%; } }
+    @media screen and (max-width: 480px) {
+      .comments__content:hover {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        padding: 40px 25px 0 25px; } }
 
 .comments__title {
   color: #ffffff;
   font-family: "Gagalin", Arial, Helvetica, sans-serif;
   font-size: 0.875rem;
   font-weight: 400;
-  padding-bottom: 1.1875rem; }
+  padding-bottom: 19px; }
+  @media screen and (max-width: 768px) {
+    .comments__title {
+      padding-bottom: 10px; } }
+  @media screen and (max-width: 480px) {
+    .comments__title {
+      font-size: 1.5rem;
+      text-align: center; } }
 
 .comments__text {
   color: #ffffff;
   font-family: "Ubuntu", Arial, Helvetica, sans-serif;
   font-size: 0.875rem;
   font-weight: 300;
-  line-height: 1.5rem;
-  padding-bottom: 0.6875rem; }
+  line-height: 24px;
+  padding-bottom: 11px; }
+  @media screen and (max-width: 768px) {
+    .comments__text {
+      padding-bottom: 20px; } }
+  @media screen and (max-width: 480px) {
+    .comments__text {
+      display: none; } }
 
 .comments__button {
   display: -webkit-inline-box;
@@ -783,9 +881,28 @@ section {
   font-size: 0.8125rem;
   font-weight: 500;
   text-transform: uppercase;
-  padding: 0.5625rem 0.9375rem;
+  padding: 9px 15px;
   background: #2f3234;
-  border-radius: 0.3125rem; }
+  border-radius: 5px; }
+  @media screen and (max-width: 480px) {
+    .comments__button {
+      display: none; } }
+
+.comments__but {
+  display: none;
+  font-family: "Ubuntu", Arial, Helvetica, sans-serif;
+  color: white;
+  font-size: 0.8125rem;
+  font-weight: 500;
+  text-transform: uppercase;
+  padding: 10px 16px 10px 16px;
+  background: #2f3234;
+  border-radius: 5px; }
+  @media screen and (max-width: 480px) {
+    .comments__but {
+      display: -webkit-inline-box;
+      display: -ms-inline-flexbox;
+      display: inline-flex; } }
 
 .working {
   background: url("../image/working.jpg") center center/cover no-repeat; }
@@ -799,23 +916,41 @@ section {
   font-weight: 400; }
 
 .footer {
-  min-height: 3.75rem;
+  min-height: 60px;
   background: url("../image/footer.jpg") center center/cover no-repeat;
-  width: 100%; }
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
 
 .footer__container {
-  min-width: 68.75rem;
+  max-width: 1100px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  min-height: 3.75rem;
-  padding: 0 5rem;
+  min-height: 60px;
+  width: 95%;
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between; }
+  @media screen and (max-width: 480px) {
+    .footer__container {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      text-align: center;
+      padding-top: 14px; } }
+
+@media screen and (max-width: 480px) {
+  .footer__info {
+    padding-bottom: 14px; } }
 
 .footer__list {
   display: -webkit-box;
@@ -824,9 +959,12 @@ section {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center; }
+  @media screen and (max-width: 480px) {
+    .footer__list {
+      padding-bottom: 18px; } }
 
 .footer__item {
-  margin-right: 1.25rem;
+  margin-right: 20px;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center; }
@@ -849,7 +987,7 @@ section {
   color: #ffffff;
   font-size: 0.875rem;
   font-weight: 300;
-  padding-bottom: 0.4375rem; }
+  padding-bottom: 4px; }
 
 .footer__nomber {
   color: #e45028;
@@ -860,6 +998,6 @@ section {
     text-decoration: underline; }
 
 .footer__nomber__img {
-  margin-right: 0.375rem; }
+  margin-right: 6px; }
 
 /*# sourceMappingURL=main.css.map */
