--- a/scss/section/comments.scss
+++ b/scss/section/comments.scss
@@ -14,6 +14,16 @@
 .comments__item {
   width: 25%;
   height: 50%;
+
+  @include tablets {
+    width: 50%;
+    height: 25%;
+  }
+
+  @include phones {
+    width: 50%;
+    height: 25%;
+  }
 }
 
 .comments__item:nth-child(1) {
@@ -52,11 +62,24 @@
   width: 100%;
   height: 100%;
   opacity: 0;
-  padding: rem(46px) rem(33px) 0 rem(20px);
+  padding: 46px 33px 0 20px;
   transition: all .5s;
+  box-sizing: border-box;
   &:hover {
     opacity: 1;
-    background: rgba(0, 0, 0, .7)
+    background: rgba(0, 0, 0, .7);
+
+    @include tablets {
+      text-align: center;
+      padding: 32px 10% 0 10%;
+    }
+
+    @include phones {
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      padding: 40px 25px 0 25px;
+    }
   }
 }
 
@@ -65,7 +88,16 @@
   @include gagalin;
   font-size: rem(14px);
   font-weight: 400;
-  padding-bottom: rem(19px);
+  padding-bottom: 19px;
+
+  @include tablets {
+    padding-bottom: 10px;
+  }
+
+  @include phones {
+    font-size: rem(24px);
+    text-align: center;
+  }
 }
 
 .comments__text {
@@ -73,8 +105,16 @@
   @include ubuntu;
   font-size: rem(14px);
   font-weight: 300;
-  line-height: rem(24px);
-  padding-bottom: rem(11px);
+  line-height: 24px;
+  padding-bottom: 11px;
+
+  @include tablets {
+    padding-bottom: 20px;
+  }
+
+  @include phones {
+    display: none;
+  }
 }
 
 .comments__button {
@@ -84,7 +124,27 @@
   font-size: rem(13px);
   font-weight: 500;
   text-transform: uppercase;
-  padding: rem(9px) rem(15px);
+  padding: 9px 15px;
   background: #2f3234;
-  border-radius: rem(5px);
+  border-radius: 5px;
+  
+  @include phones {
+    display: none;
+  }
+}
+
+.comments__but {
+  display: none;
+  @include ubuntu;
+  color: white;
+  font-size: rem(13px);
+  font-weight: 500;
+  text-transform: uppercase;
+  padding: 10px 16px 10px 16px;
+  background: #2f3234;
+  border-radius: 5px;
+  
+  @include phones {
+    display: inline-flex;
+  }
 }
