--- a/scss/section/footer.scss
+++ b/scss/section/footer.scss
@@ -1,25 +1,42 @@
 .footer {
-  min-height: rem(60px);
+  min-height: 60px;
   background: url("../image/footer.jpg") center center / cover no-repeat;
   width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 .footer__container {
-  min-width: rem(1100px);
+  max-width: 1100px;
   display: flex;
   align-items: center;
-  min-height: rem(60px);
-  padding: 0 rem(80px);
+  min-height: 60px;
+  width: 95%;
   justify-content: space-between;
+
+  @include phones {
+    flex-direction: column;
+    text-align: center;
+    padding-top: 14px;
+  }
+}
+
+.footer__info {
+  @include phones {
+    padding-bottom: 14px;
+  }
 }
 
 .footer__list {
   display: flex;
   align-items: center;
+  @include phones {
+    padding-bottom: 18px;
+  }
 }
 
 .footer__item {
-  margin-right: rem(20px);
+  margin-right: 20px;
   align-items: center;
   &:last-child {
     margin-right: 0;
@@ -40,7 +57,7 @@
   color: #ffffff;
   font-size: rem(14px);
   font-weight: 300;
-  padding-bottom: rem(7px);
+  padding-bottom: 4px;
 }
 
 .footer__nomber {
@@ -54,5 +71,5 @@
 }
 
 .footer__nomber__img {
-  margin-right: rem(6px);
+  margin-right: 6px;
 }
