--- a/scss/section/forms.scss
+++ b/scss/section/forms.scss
@@ -3,7 +3,11 @@
 }
 
 .forms__container {
-  padding: rem(112px) rem(85px) 0 rem(82px);
+  display: flex;
+  justify-content: center;
+  @include tablets {
+    align-items: center;
+  }
 }
 
 .forms__title {
@@ -12,22 +16,40 @@
   @include gagalin;
   font-size: rem(72px);
   font-weight: 400;
-  padding-bottom: rem(25px);
+  padding-bottom: 25px;
 
 }
 
 .forms__all {
   display: flex;
   width: 100%;
+
+  @include tablets {
+    flex-direction: column;
+    width: 65%;
+  }
+
+  @include phones {
+    flex-direction: column;
+    width: 100%;
+  }
 }
 
 .forms__left {
   flex-basis: 50%;
-  padding-right: rem(10px);
+  padding-right: 10px;
+
+  @include tablets {
+    padding: 0;
+  }
 }
 
 .forms__row {
   display: flex;
+  
+  @include phones {
+    justify-content: center;
+  }
 }
 
 .forms__left__label{
@@ -44,19 +66,24 @@
   @include ubuntu;
   font-size: rem(14px);
   font-weight: 300;
-  padding-bottom: rem(5px);
+  padding-bottom: 5px;
 }
 
 .forms__left__input {
   width: 100%;
   border: none;
-  border-radius: rem(5px);
-  padding: rem(9px) 0 rem(9px) rem(20px);
+  border-radius: 5px;
+  padding: 9px 0 9px 10px;
+  box-sizing: border-box;
 }
 
 .forms__right {
   flex-basis: 50%;
-  padding-left: rem(10px);
+  padding-left: 10px;
+
+  @include tablets {
+    padding: 0;
+  }
 }
 
 .forms__right__name {
@@ -64,15 +91,17 @@
   @include ubuntu;
   font-size: rem(14px);
   font-weight: 300;
-  padding-bottom: rem(5px);
+  padding-bottom: 5px;
 }
 
 .forms__right__textarea {
   width: 100%;
-  border-radius: rem(5px);
-  height: rem(113px);
+  border-radius: 5px;
+  padding: 9px 0 9px 20px;
+  height: 113px;
   border: none;
-  margin-bottom: rem(9px);
+  margin-bottom: 9px;
+  box-sizing: border-box;
 }
 
 .forms__right__label {
@@ -83,22 +112,26 @@
   position: relative;
   display: flex;
   align-items: center;
-  margin-right: rem(25px);
-  margin-bottom: rem(20px);
+  margin-right: 25px;
+  margin-bottom: 20px;
   &:last-child {
     margin-right: 0;
+  }
+
+  @include phones {
+    justify-content: center;
   }
 }
 
 .forms__radio__click {
-  width: rem(15px);
-  height: rem(15px);
+  width: 15px;
+  height: 15px;
   background-color: white;
   border: 0;
   border-radius: 50%;
   display: inline-block;
   position: relative;
-  margin-right: rem(10px);
+  margin-right: 10px;
 }
 
 .forms__radio__click--active {
@@ -106,8 +139,8 @@
   top: 50%;
   left: 50%;
   display: inline-block;
-  width: rem(7px);
-  height: rem(7px);
+  width: 7px;
+  height: 7px;
   background: #e35028;
   border-radius: 50%;
   transform: translate(-50%, -50%);
@@ -125,18 +158,18 @@
 }
 
 .forms__checkbox__click {
-  width: rem(15px);
-  height: rem(15px);
+  width: 15px;
+  height: 15px;
   background-color: white;
   border: 0;
   position: relative;
-  margin-right: rem(10px);
+  margin-right: 10px;
 }
 
 .forms__checkbox__click--active {
   background: url("../image/checkbox.png") center center no-repeat;
-  width: rem(11px);
-  height: rem(9px);
+  width: 11px;
+  height: 9px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -158,10 +191,10 @@
   font-size: rem(13px);
   font-weight: 500;
   text-transform: uppercase;
-  padding: rem(7px) rem(15px);
+  padding: 7px 15px;
   background-color: #e45028;
-  border-radius: rem(5px);
-  margin-right: rem(5px);
+  border-radius: 5px;
+  margin-right: 5px;
 }
 
 .forms__clear {
@@ -169,6 +202,6 @@
   @include ubuntu;
   font-size: rem(14px);
   font-weight: 300;
-  padding: rem(7px) rem(15px);
-  border-radius: rem(5px);
+  padding: 7px 15px;
+  border-radius: 5px;
 }
