--- a/scss/section/team.scss
+++ b/scss/section/team.scss
@@ -1,14 +1,26 @@
 .team {
   background: url("../image/team.jpg") center center / cover no-repeat;
+  position: relative;
 }
 
 .team__container {
   height: 100%;
-  width: 50%;
-  margin-left: auto;
+  width: 49%;
+  position: absolute;
+  right: 0;
   background-color: #2f3234;
   opacity: 0.93;
-  padding: rem(113px) rem(102px) 0 rem(102px);
+  padding: 8% 8% 0 9%;
+  @include tablets {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    padding-left: 20%;
+    padding-right: 20%;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 .team__title {
@@ -16,17 +28,62 @@
   @include gagalin;
   font-size: rem(72px);
   font-weight: 400;
+  padding-bottom: 24px;
+}
+
+.team__list {
+  padding-left: 16px;
+}
+
+.team__item {
+  padding-bottom: 28px;
 }
 
 .team__name {
+  position: relative;
   color: #ffffff;
   font-size: rem(14px);
   font-weight: 400;
   @include gagalin;
+  &:before {
+    content: "";
+    left: -19px;
+    top: 8px;
+    width: 0; height: 0;
+    border-style: solid;
+    border-width: 5px;
+    border-color: #f9b43b transparent transparent transparent ;
+    position: absolute;
+  }
 }
 
 .team__content {
   display: flex;
+  overflow: hidden;
+  height: 0;
+  @include tablets {
+    flex-direction: column;
+  }
+}
+
+.team__img {
+  margin-top: 14px;
+  margin-bottom: 4px;
+}
+
+.team__text {
+  padding-left: 20px;
+  margin-top: 11px;
+  @include tablets {
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+.team__content--active {
+  height: auto;
 }
 
 .team__text__title {
@@ -41,4 +98,10 @@
   font-size: rem(14px);
   font-weight: 300;
   @include ubuntu;
+  line-height: 24.01px;
+  padding-top: 13px;
+  @include tablets {
+    width: 75%;
+    display: flex;
+  }
 }
